Refactor to different files + create Game class + use raylib from github instead of local

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,8 @@ target_link_options(${PROJECT_NAME} PRIVATE
 # === raylib setup ===
 FetchContent_Declare(
         raylib
-        SOURCE_DIR "${CMAKE_SOURCE_DIR}/third_party/raylib"
+        GIT_REPOSITORY https://github.com/raysan5/raylib.git
+        GIT_TAG master
 )
 FetchContent_MakeAvailable(raylib)
 
